<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <Button android:id="@id/mainlogin_button_login" android:paddingLeft="32.0dip" android:paddingRight="32.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginBottom="40.0dip" android:text="@string/action_sign_in_register" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" android:onClick="login" />
    <Button android:id="@id/mainlogin_button_settings" android:paddingLeft="32.0dip" android:paddingRight="32.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="40.0dip" android:layout_marginBottom="40.0dip" android:text="@string/action_sign_in_settings" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" android:onClick="settings_login" />
    <EditText android:textColor="@color/black" android:textColorHint="@color/black" android:id="@id/mainlogin_edittext_entry" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginRight="40.0dip" android:hint="@string/prompt_password" android:maxLines="1" android:ems="10" android:singleLine="true" android:layout_alignParentLeft="true" android:layout_centerVertical="true" android:inputType="textPassword" android:imeOptions="actionUnspecified|normal" android:imeActionLabel="@string/action_sign_in_short" android:imeActionId="69" />
    <TextView android:textAppearance="?android:textAppearanceMedium" android:textColor="@color/black" android:id="@id/mainlogin_textview_prompt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="40.0dip" android:layout_marginRight="40.0dip" android:text="@string/login_progress_signing_in" android:layout_centerHorizontal="true" android:fontFamily="sans-serif-light" />
</RelativeLayout>
