<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/black" android:id="@id/text_view_add_service" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:text="@string/text_view_add_service" android:layout_alignBaseline="@id/addentry_edittext_service" android:layout_alignBottom="@id/addentry_edittext_service" android:layout_alignParentLeft="true" />
    <EditText android:textColor="@color/black" android:id="@id/addentry_edittext_service" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginRight="40.0dip" android:ems="10" android:layout_alignParentRight="true" android:inputType="text" />
    <TextView android:textColor="@color/black" android:id="@id/text_view_add_username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:text="@string/text_view_add_username" android:layout_alignBaseline="@id/addentry_edittext_username" android:layout_alignBottom="@id/addentry_edittext_username" android:layout_alignParentLeft="true" />
    <EditText android:textColor="@color/black" android:id="@id/addentry_edittext_username" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginRight="40.0dip" android:ems="10" android:layout_below="@id/addentry_edittext_service" android:layout_alignParentRight="true" android:inputType="text" />
    <TextView android:textColor="@color/black" android:id="@id/text_view_add_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:text="@string/text_view_add_email" android:layout_alignBaseline="@id/addentry_edittext_email" android:layout_alignBottom="@id/addentry_edittext_email" android:layout_alignParentLeft="true" />
    <EditText android:textColor="@color/black" android:id="@id/addentry_edittext_email" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginRight="40.0dip" android:ems="10" android:layout_below="@id/addentry_edittext_username" android:layout_alignParentRight="true" android:inputType="textWebEmailAddress" />
    <TextView android:textColor="@color/black" android:id="@id/text_view_add_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:text="@string/text_view_add_password" android:layout_alignBaseline="@id/addentry_edittext_password" android:layout_alignBottom="@id/addentry_edittext_password" android:layout_alignParentLeft="true" />
    <EditText android:textColor="@color/black" android:id="@id/addentry_edittext_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginRight="40.0dip" android:ems="10" android:layout_below="@id/addentry_edittext_email" android:layout_alignParentRight="true" android:inputType="textPassword" />
    <TextView android:textColor="@color/black" android:id="@id/text_view_add_password_again" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:text="@string/text_view_add_password_again" android:layout_alignBaseline="@id/addentry_edittext_passwordagain" android:layout_alignBottom="@id/addentry_edittext_passwordagain" android:layout_alignParentLeft="true" />
    <EditText android:textColor="@color/black" android:id="@id/addentry_edittext_passwordagain" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginRight="40.0dip" android:ems="10" android:layout_below="@id/addentry_edittext_password" android:layout_alignParentRight="true" android:inputType="textPassword" />
    <Button android:id="@id/addentry_button_save" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginBottom="40.0dip" android:text="@string/button_add_save" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
    <Button android:id="@id/addentry_button_cancel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="40.0dip" android:layout_marginBottom="40.0dip" android:text="@string/button_add_cancel" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
    <Button android:id="@id/addentry_button_delete" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40.0dip" android:text="@string/button_add_delete" android:layout_alignParentBottom="true" android:layout_centerInParent="true" />
    <TextView android:textColor="@color/black" android:id="@id/addentry_textview_prompt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20.0dip" android:text="@string/text_view_entry_prompt" android:layout_above="@id/addentry_button_cancel" android:layout_centerHorizontal="true" />
</RelativeLayout>
