<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <EditText android:textColor="@color/black" android:id="@id/pinentry_edittext_pin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="100.0dip" android:layout_marginRight="40.0dip" android:ems="10" android:maxLength="4" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:inputType="numberPassword" />
    <EditText android:textColor="@color/black" android:id="@id/pinentry_edittext_pinagain" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginRight="40.0dip" android:ems="10" android:maxLength="4" android:layout_below="@id/pinentry_edittext_pin" android:layout_alignParentRight="true" android:inputType="numberPassword" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/black" android:id="@id/text_view_pin_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:text="@string/generic_pin_entry" android:layout_alignBaseline="@id/pinentry_edittext_pin" android:layout_alignBottom="@id/pinentry_edittext_pin" android:layout_alignParentLeft="true" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/black" android:id="@id/text_view_pin_password_again" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:text="@string/generic_pin_entry_again" android:layout_alignBaseline="@id/pinentry_edittext_pinagain" android:layout_alignBottom="@id/pinentry_edittext_pinagain" android:layout_alignParentLeft="true" />
    <TextView android:textColor="@color/black" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/text_view_pin_message" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:layout_marginStart="40.0dip" android:layout_marginEnd="40.0dip" />
    <EditText android:textColor="@color/black" android:id="@id/pinentry_edittext_pinold" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_marginRight="40.0dip" android:ems="10" android:layout_below="@id/pinentry_edittext_pinagain" android:layout_alignParentRight="true" android:inputType="numberPassword" />
    <TextView android:textColor="@color/black" android:id="@id/text_view_pin_password_old" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:text="@string/generic_pin_entry_old" android:layout_alignBaseline="@id/pinentry_edittext_pinold" android:layout_alignBottom="@id/pinentry_edittext_pinold" android:layout_alignParentLeft="true" />
    <Button android:id="@id/button_pin_submit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40.0dip" android:text="@string/button_submit" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:onClick="submit" />
    <TextView android:textColor="@color/black" android:id="@id/pinentry_textview_prompt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/text_view_pin_standard" android:layout_above="@id/button_pin_submit" android:layout_centerHorizontal="true" />
</RelativeLayout>
