<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textColor="@color/black" android:id="@id/textView1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="40.0dip" android:text="@string/text_view_welcome_message" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <EditText android:textColor="@color/black" android:id="@id/welcome_edittext_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="80.0dip" android:layout_marginRight="40.0dip" android:ems="10" android:layout_below="@id/textView1" android:layout_alignParentTop="true" android:layout_alignParentRight="true" android:inputType="textPassword" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/black" android:id="@id/text_view_welcome_password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:text="@string/text_view_password" android:layout_alignBaseline="@id/welcome_edittext_password" android:layout_alignBottom="@id/welcome_edittext_password" android:layout_alignParentLeft="true" />
    <EditText android:textColor="@color/black" android:id="@id/welcome_edittext_passwordagain" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:layout_marginRight="40.0dip" android:ems="10" android:layout_below="@id/welcome_edittext_password" android:layout_alignParentRight="true" android:inputType="textPassword" />
    <TextView android:textAppearance="?android:textAppearanceSmall" android:textColor="@color/black" android:id="@id/text_view_welcome_password_again" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:text="@string/text_view_password_again" android:layout_alignBaseline="@id/welcome_edittext_passwordagain" android:layout_alignBottom="@id/welcome_edittext_passwordagain" android:layout_alignParentLeft="true" />
    <TextView android:textColor="@color/black" android:id="@id/welcome_textview_prompt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginRight="40.0dip" android:text="@string/text_view_password_standard" android:layout_centerHorizontal="true" android:layout_centerVertical="true" />
    <Button android:id="@id/welcome_button_submit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="40.0dip" android:text="@string/button_submit" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true" android:onClick="submit" />
</RelativeLayout>
