<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ListView android:id="@id/pwlist_list_pwlist" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" />
    <TextView android:textColor="@color/black" android:id="@id/pwlist_textview_prompt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:text="@string/text_view_pwlist_prompt" android:layout_below="@id/pwlist_list_pwlist" android:layout_centerHorizontal="true" />
    <Button android:id="@id/addentry_button_add" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="40.0dip" android:layout_marginBottom="40.0dip" android:text="@string/button_add_add" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true" />
    <Button android:id="@id/button_goto_settings" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="40.0dip" android:layout_marginBottom="40.0dip" android:text="@string/button_goto_settings" android:layout_alignParentRight="true" android:layout_alignParentBottom="true" />
</RelativeLayout>
